Fix: added schema for remaining handled exceptions
